updates hero to fix on ios screen. moves padding from bottom of hero to the top of intro. sets hero to position relative. bumps header and hero transition timeline marker to z index 2

--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -2,13 +2,16 @@
   width: 100vw;
   height: 100vh;
 
-  padding-bottom: 100px;
+  position: relative;
+  
   background-color: var(--color-middle);
+
+  overflow: hidden;
 }
 
 .hero__image {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   background-position: center;
   background-size: cover;
@@ -118,4 +121,5 @@
   height: 120px;
   bottom: -60px;
   background-color: var(--color-darkest);
+  z-index: 2;
 }
