--- a/scss/components/_intro.scss
+++ b/scss/components/_intro.scss
@@ -1,4 +1,14 @@
 .intro {
+  position: relative;
+
+  width: 100%;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  
+  background-color: var(--color-middle);
+}
+
+.intro p {
   width: 90%;
   max-width: 40em;
   margin: 0 auto;
