--- a/scss/components/_root.scss
+++ b/scss/components/_root.scss
@@ -1,4 +1,5 @@
 html, body {
+  width: 100%;
   padding: 0;
   margin: 0;
   @include text-size($base);
